--- a/k8s_config.yml
+++ b/k8s_config.yml
@@ -171,3 +171,9 @@
       name: kubelet
       enabled: true
       state: started
+
+  handlers:
+    - name: restart containerd
+      ansible.builtin.service:  
+        name: containerd
+        state: restarted
